# adaptivediffgrid_ex

./: .gitmodules  CMakeLists.txt  LICENSE  Readme.md  create_env.sh  environment.yml
10453_ts027/: camera.ini  images.txt  poses.txt
10453_ts027/images/: 0000.tiff  0004.tiff  0005.tiff  0015.tiff  0019.tiff  0022.tiff  0023.tiff  0024.tiff  0029.tiff  0030.tiff  0032.tiff  0036.tiff
10643_40/: angles.txt  dataset.ini
10643_40/images/: 0002.tiff  0008.tiff  0018.tiff  0019.tiff  0028.tiff  0030.tiff  0031.tiff  0032.tiff
10643_51/: dataset.ini  info.txt
10643_51/images/: 0002.tiff  0006.tiff  0009.tiff  0013.tiff  0018.tiff  0026.tiff  0035.tiff  0038.tiff
cmake/: FindOpenMesh.cmake  cotire.cmake
configs/: 10453_ours_dn.ini  10453ours.ini  10643_40ours.ini  10643_40ours_dn.ini  10643_51ours.ini  10643_51ours_dn.ini
hyperacorn/: README.md
hyperacorn/csrc/: CMakeLists.txt  Settings.h  build_config.h  build_config.h.in  git_sha1.h.in
hyperacorn/csrc/data/: Dataloader.h  SceneBase.h
hyperacorn/csrc/geometry/: .non_local.h.swp  ImplicitNet.h  all.h  geometry.h  geometry_oct.cpp  geometry_oct.h  laplacian.h  non_local.h
hyperacorn/csrc/modules/: CameraPose.cu  CameraPose.h  GradientCorrection.cu  GradientCorrection.h  IndirectGridSample3D.cu  IndirectGridSample3D.h  ToneMapper.cpp  ToneMapper.h
hyperacorn/csrc/structure/: GpuBitonicSort.h  HelperStructs.cpp  HelperStructs.h  HyperTree.cpp  HyperTree.cu  HyperTree.h  HyperTreeStructureOptimizer.cpp  HyperTreeStructureOptimizer.h
hyperacorn/csrc/utils/: cimg_wrapper.cpp  cimg_wrapper.h  cnpy.cpp  cnpy.h  utils.h
patches/: or_patch.patch
samples/: CMakeLists.txt  create_cryo_dataset.cpp  hyper_train.cpp
scenes/10453_ts027/: TS_027_bin5.tlt  angles.txt  dataset.ini
scenes/10453_ts027/images/: 0001.tiff  0002.tiff  0003.tiff  0006.tiff  0007.tiff  0008.tiff  0009.tiff  0010.tiff  0011.tiff  0012.tiff  0013.tiff  0014.tiff  0016.tiff  0017.tiff  0018.tiff  0020.tiff  0021.tiff  0025.tiff  0026.tiff  0027.tiff  0028.tiff  0031.tiff  0033.tiff  0034.tiff  0035.tiff  0037.tiff  0038.tiff  0039.tiff  0040.tiff
scenes/10643_40/: b2tilt40_bin5.tlt  poses.txt
scenes/10643_40/images/: 0000.tiff  0001.tiff  0003.tiff  0004.tiff  0005.tiff  0006.tiff  0007.tiff  0009.tiff  0010.tiff  0011.tiff  0012.tiff  0013.tiff  0014.tiff  0015.tiff  0016.tiff  0017.tiff  0020.tiff  0021.tiff  0022.tiff  0023.tiff  0024.tiff  0025.tiff  0026.tiff  0027.tiff  0029.tiff  0033.tiff  0034.tiff  0035.tiff  0036.tiff  0037.tiff  0038.tiff  0039.tiff  0040.tiff
scenes/10643_51/: angles.txt  b3tilt51_bin5.tlt  masks.txt  poses.txt
scenes/10643_51/images/: 0000.tiff  0001.tiff  0003.tiff  0004.tiff  0005.tiff  0007.tiff  0008.tiff  0010.tiff  0011.tiff  0012.tiff  0014.tiff  0015.tiff  0016.tiff  0017.tiff  0019.tiff  0020.tiff  0021.tiff  0022.tiff  0023.tiff  0024.tiff  0025.tiff  0027.tiff  0028.tiff  0029.tiff  0030.tiff  0031.tiff  0032.tiff  0033.tiff  0034.tiff  0036.tiff  0037.tiff  0039.tiff  0040.tiff
scenes/maskcreateexample/1064340/: b2tilt40_bin5_ali2.fid.txt  makermask.m  maskcreatefinal.py  readme.md
